--- a/client/src/styles/components/_controls.scss
+++ b/client/src/styles/components/_controls.scss
@@ -74,8 +74,10 @@
   &__btn {
     grid-row: 1 / 2;
     grid-column: 1 / 2;
-    width: 6rem;
-    height: 6rem;
+    // width: 6rem;
+    // height: 6rem;
+    width: 5rem;
+    height: 5rem;
     display: flex;
     margin: .6rem;
     justify-content: center;
@@ -111,8 +113,10 @@
   &__back-1, &__back-2 {
     grid-row: 1 / 2;
     grid-column: 1 / 2;
-    width: 6rem;
-    height: 6rem;
+    // width: 6rem;
+    // height: 6rem;
+    width: 5rem;
+    height: 5rem;
     border-radius: 50%;
     filter: blur(1px);
     z-index: 100;
@@ -138,6 +142,65 @@
       animation-play-state: paused;
     }
   }
+}
+
+/*  SEGMENTED-CONTROL */
+.segmented-control {
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
+  width: 20.4rem;
+  height: 4rem;
+  box-shadow: $shadow;
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+  position: relative;
+  font-family: $main-font;
+  // font-family: $brand-font;
+
+  input { display: none; }
+
+  > input:checked + label {
+    transition: all .5s ease;
+    color: var(--primary);
+    }
+
+  &__1, &__2, &__3 {
+    width: 6.8rem;
+    height: 3.6rem;
+    font-size: 1.4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: var(--greyDark);
+    transition: all .5s ease;
+
+    &:hover { color: var(--primary); }
+  }
+
+  &__color {
+    position: absolute;
+    height: 3.4rem;
+    width: 6.2rem;
+    margin-left: .3rem;
+    border-radius: .8rem;
+    box-shadow: $inner-shadow;
+    pointer-events: none;
+  }
+}
+
+#tab-1:checked ~ .segmented-control__color {
+  transform: translateX(0);
+  transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+#tab-2:checked ~ .segmented-control__color {
+  transform: translateX(6.8rem);
+  transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+#tab-3:checked ~ .segmented-control__color {
+  transform: translateX(13.6rem);
+  transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 @keyframes marquee {
