--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,5 +1,5 @@
 @import 'components/variables';
-@import 'components/layout-home';
+@import 'components/layout';
 @import 'components/controls';
 
 * {
