--- a/client/src/styles/components/_layout.scss
+++ b/client/src/styles/components/_layout.scss
@@ -17,8 +17,9 @@
   padding: 0 1rem;
 
   // LEFT - artwork
-  #control-artwork-container > img {
+  #control-player-container > img {
     width: 100%;
+    height: 280px;
   }
 
   // MIDDLE - LED and mood controls
@@ -51,13 +52,14 @@
   overflow: hidden;
   background-color: var(--greyLight-1);
   box-shadow: $shadow;
+  cursor: pointer;
   // box-shadow: $inner-shadow;
 
   &.checked {
       box-shadow: $inner-shadow;
   }
 
-  #mixtape-card-artwork {
+  .mixtape-card-artwork {
     background-size: cover;
     background-position: left;
     background-repeat: no-repeat;
