--- a/client/src/styles/components/_controls.scss
+++ b/client/src/styles/components/_controls.scss
@@ -203,6 +203,10 @@
   transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
+#progress-bar {
+  width: 100%;
+}
+
 @keyframes marquee {
   0% { transform: translateX(70%); }
   // 0% { transform: translateX(0); }
