--- a/client/src/styles/components/_layout.scss
+++ b/client/src/styles/components/_layout.scss
@@ -16,6 +16,12 @@
   gap: 1rem;
   padding: 0 1rem;
 
+  #control-player-container {
+    border-radius: 1rem;
+    overflow: hidden;
+    box-shadow: $shadow;
+  }
+
   // LEFT - artwork
   #control-player-container > img {
     width: 100%;
@@ -33,7 +39,21 @@
       margin: 0 auto;
     }
   }
+
 }
+
+// PLAY & SEEK CONTAINER
+#control-seek-container {
+  display: flex;
+  align-items: center;
+
+  #progress-bar-container {
+    width: 100%;
+    margin: 0 3em;
+  }
+}
+
+
 
 // GRID UNDERNEATH CONTROLS
 #grid-container {
