--- a/client/src/styles/components/_controls.scss
+++ b/client/src/styles/components/_controls.scss
@@ -5,7 +5,6 @@
   height: 50px;
   // background-color: rgb(127,138,70);
   background-color: rgb(175, 191, 96);
-  
   text-align: center;
   line-height: 50px;
   font-size: 40px;
@@ -18,24 +17,9 @@
   border-radius: 5px;
   box-shadow: 0px 0px 50px #000000ee inset;
   text-shadow: 0px 0px 20px #ffff0022;
-  margin: 5px;
+  // margin: 5px;
   color: #000000aa;
   // color: var(--primary-dark);
-
-  // PURPLE VERSION:
-  // background-color: var(--primary);
-  // text-align:center;
-  // line-height: 50px;
-  // font-size:32pt;
-  // border-top: 3px solid #000000cc;
-  // border-left: 3px solid #000000cc;
-  // border-bottom: 1px solid #cfcfcf33;
-  // border-right: 1px solid #cfcfcf33;
-  // border-radius: 5px;
-  // box-shadow: 0px 0px 50px #000000ee inset;
-  // text-shadow: 0px 0px 20px var(--greyLight-3);
-  // margin: 5px;
-  // color: var(--greyLight-3);
 
   &.track {
     // width: 180px;
@@ -52,9 +36,6 @@
   &.track > .marquee-text.scroll {
     animation: marquee 15s linear infinite;
   }
-  // &.clock {
-  //   width: 180px;
-  // }
 }
 
 /*  PLAY BUTTON  */
@@ -148,7 +129,7 @@
 .segmented-control {
   grid-column: 3 / 4;
   grid-row: 1 / 2;
-  width: 20.4rem;
+  width: 20rem;
   height: 4rem;
   box-shadow: $shadow;
   border-radius: 1rem;
@@ -156,7 +137,6 @@
   align-items: center;
   position: relative;
   font-family: $main-font;
-  // font-family: $brand-font;
 
   input { display: none; }
 
@@ -203,6 +183,125 @@
   transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
+/*  VOLUME SLIDER  */
+// .slider {
+//   grid-column: 3 / 4;
+//   grid-row: 5 / 6;
+//   align-self: center;
+//   display: flex;
+//   flex-direction: column;
+
+//   &__box {
+//     width: 100%;
+//     height: 1rem;
+//     cursor: pointer;
+//     box-shadow: $inner-shadow;
+//     border-radius: 1rem;
+//     position: relative;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//   }
+
+//   &__btn {
+//     width: 2rem;
+//     height: 2rem;
+//     border-radius: 50%;
+//     background: var(--white);
+//     position: absolute;
+//     box-shadow: 0px .1rem .3rem 0px var(--greyLight-3);
+//     z-index: 200;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+
+//     &:hover ~ .slider__tooltip {opacity: 1;}
+//     &::after {
+//       content: '';
+//       position: absolute;
+//       width: .8rem;
+//       height: .8rem;
+//       border-radius: 50%;
+//       box-shadow: $inner-shadow;
+//     }
+//   }
+
+//   &__color {
+//     height: 100%;
+//     width: 50%;
+//     position: absolute;
+//     left: 0;
+//     z-index: 100;
+//     border-radius: inherit;
+//     background: var(--primary);
+//     background: linear-gradient(-1deg, var(--primary-dark) 0%, var(--primary) 50%, var(--primary-light) 100%);
+//   }
+
+//   &__tooltip {
+//     position: absolute;
+//     top: 2.6rem;
+//     height: 2.5rem;
+//     width: 3rem;
+//     border-radius: .6rem;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     font-size: 1.2rem;
+//     color: var(--primary);
+//     box-shadow: $shadow;
+//     opacity: 0;
+//     transition: opacity .3s ease;
+//   }
+// }
+
+#profile {
+  width: 50px;
+  height: 50px;
+  // width: 4rem;
+  //   height: 4rem;
+  border-radius: 50%;
+  box-shadow: $shadow;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: var(--greyDark);
+  transition: all .5s ease;
+
+  &:active {
+    box-shadow: $inner-shadow;
+    color: var(--primary);
+  }
+  &:hover {color: var(--primary);}
+}
+
+input[type=range]#volume-bar {
+  -webkit-appearance: none;
+}
+
+input[type=range]#volume-bar::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background: var(--white);
+  border: none;
+  box-shadow: 0 0 2px black;
+  // margin-top: calc(max((3em - 1px - 1px) * 0.5,0px) - 3.5em * 0.5);
+}
+
+input[type=range]#volume-bar::-webkit-slider-runnable-track {
+  // -webkit-appearance: none;
+  height: 1em;
+  // border: 1px solid #b2b2b2;
+  box-shadow: $inner-shadow;
+  border-radius: 1rem;
+  // background: linear-gradient(90deg, rgba(34,193,195,1) 0%, rgba(253,187,45,0.6362920168067228) 100%);;
+  // box-shadow: none;
+}
+
+// PROGRESS BAR
 #progress-bar {
   width: 100%;
 }
