--- a/client/src/styles/components/_layout.scss
+++ b/client/src/styles/components/_layout.scss
@@ -16,27 +16,63 @@
   gap: 1rem;
   padding: 0 1rem;
 
+  // LEFT COL - artwork
   #control-player-container {
     border-radius: 1rem;
     overflow: hidden;
     box-shadow: $shadow;
+    position: relative;
+    padding-top: 56.25%;  // this is for apsect ratio friendly containers.  Read here: https://css-tricks.com/aspect-ratio-boxes/
+
+    .react-player, > img {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    > img {
+      width: 100%;
+      height: 100%;
+      aspect-ratio: 1 / 1;
+      object-fit: cover;
+    }
   }
 
-  // LEFT - artwork
-  #control-player-container > img {
-    width: 100%;
-    height: 280px;
-  }
-
-  // MIDDLE - LED and mood controls
+  // MIDDLE COL - LED and mood controls
   #control-led-container {
     display: grid;
 
     #mood-controls {
-      align-items: center;
-      justify-content: center;
-      text-align: center;
       margin: 0 auto;
+      display: grid;
+      align-items: end;
+      justify-content: end;
+    }
+  }
+
+  // RIGHT COL - Profile and volume controls
+  #control-volume-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    // justify-content: end;
+    // align-items: end;
+    padding: 0 1rem;
+
+    #nav-container {
+      display: grid;
+      // grid-template-columns: 1fr;
+      justify-content: end;
+    }
+  
+    #volume-container {
+      display: grid;
+      grid-template-columns: 1fr;
+      // padding: 0 2rem;
+      justify-content: end;
+      align-items: end;
+      .volume input {
+        width: 100%;
+      }
     }
   }
 
@@ -53,14 +89,11 @@
   }
 }
 
-
-
 // GRID UNDERNEATH CONTROLS
 #grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1.5em;
-  text-align: center;
 }
 
 .mixtape-card {
@@ -68,20 +101,40 @@
   // border: 1px solid black;
   display: grid;
   border-radius: 1rem;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
   overflow: hidden;
-  background-color: var(--greyLight-1);
   box-shadow: $shadow;
   cursor: pointer;
   // box-shadow: $inner-shadow;
 
   &.checked {
-      box-shadow: $inner-shadow;
+    color: var(--primary);
+    box-shadow: $inner-shadow;
   }
 
   .mixtape-card-artwork {
     background-size: cover;
-    background-position: left;
+    background-position: center;
     background-repeat: no-repeat;
   }
+
+  .mixtape-card-info {
+    width: 100%;
+    padding: 1rem;
+    // color: var(--greyDark);
+    font-family: $main-font;
+    font-size: 1.25rem;
+
+    .artist-name {
+      font-weight: bold;
+    }
+
+    .artist-name, .track-name {
+      margin-bottom: 0.5rem;
+    }
+
+    &:hover, &.checked { color: var(--primary); }
+
+  }
+
 }
