--- a/client/src/styles/components/_variables.scss
+++ b/client/src/styles/components/_variables.scss
@@ -4,6 +4,9 @@
     url("../../fonts/AtAmiga-Regular.woff")
   }
 
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@400;700&display=swap');
+
 :root {
   --primary-light: #8abdff;
   --primary: #6d5dfc;
@@ -24,30 +27,16 @@ $inner-shadow: inset .2rem .2rem .5rem var(--greyLight-2),
 inset -.2rem -.2rem .5rem var(--white);
 
 $brand-font: "AtAmiga-Regular";
-$main-font: "Poppins", sans-serif;
-
+// $main-font: "Share Tech Mono", monospace;
+$main-font: 'Smooch Sans', sans-serif;
 
 h1 {
   font-family: $brand-font;
   text-shadow:0 -1px 1px rgba(0,0,0,0.5);
-  // font-size: 2em;
   font-size: 2em;
-  // color: white;
   color: var(--greyLight-3);
   text-align: center;
-  margin: 0;
-  // margin: 0.5rem;
-  // text-shadow: 0px 3px 0px var(--greyLight-1),
-  //   0px 14px 10px rgba(0,0,0,0.15),
-  //   0px 24px 2px rgba(0,0,0,0.1),
-  //   0px 34px 30px rgba(0,0,0,0.1);
-
-  // text-shadow: -10px 10px 0px var(--primary-light),
-  //             -20px 20px 0px var(--primary),
-  //             -30px 30px 0px var(--primary-dark);
-
-  // text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
-  //             0px -5px 35px var(--greyLight-3);
+  margin: 0.25rem;
 }
 
 h2 {
