--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -7,10 +7,11 @@
 }
 
 .site-wrapper {
-  max-width: 1600px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
 body {
   background-color: var(--greyLight-1);
+  color: var(--greyDark);
 }
