--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import 'components/variables';
 @import 'components/layout';
 @import 'components/controls';
+@import 'components/form';
 
 * {
   box-sizing: border-box;
