--- a/client/src/styles/components/_controls.scss
+++ b/client/src/styles/components/_controls.scss
@@ -131,7 +131,7 @@
   grid-column: 3 / 4;
   grid-row: 1 / 2;
   width: 20rem;
-  height: 4rem;
+  height: 3rem;
   box-shadow: $shadow;
   border-radius: 1rem;
   display: flex;
@@ -148,7 +148,7 @@
 
   &__1, &__2, &__3 {
     width: 6.8rem;
-    height: 3.6rem;
+    height: 2.6rem;
     font-size: 1.4rem;
     display: flex;
     justify-content: center;
@@ -162,7 +162,7 @@
 
   &__color {
     position: absolute;
-    height: 3.4rem;
+    height: 2.4rem;
     width: 6.2rem;
     margin-left: .3rem;
     border-radius: .8rem;
@@ -189,7 +189,7 @@
   // grid-column: 2;
   // grid-row: 1;
   width: 13.6rem;
-  height: 4rem;
+  height: 3rem;
   box-shadow: $shadow;
   border-radius: 1rem;
   display: flex;
@@ -206,7 +206,7 @@
 
   &__1, &__2 {
     width: 6.8rem;
-    height: 3.6rem;
+    height: 2.6rem;
     font-size: 1.4rem;
     display: flex;
     justify-content: center;
@@ -220,7 +220,7 @@
 
   &__color {
     position: absolute;
-    height: 3.4rem;
+    height: 2.4rem;
     width: 6.2rem;
     margin-left: .3rem;
     border-radius: .8rem;
@@ -238,78 +238,56 @@
   transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
-/*  VOLUME SLIDER  */
-// .slider {
-//   grid-column: 3 / 4;
-//   grid-row: 5 / 6;
-//   align-self: center;
-//   display: flex;
-//   flex-direction: column;
+// VOLUME BAR
+.volume label {
+  font-family: $main-font;
+  font-size: 1.25rem;
+}
 
-//   &__box {
-//     width: 100%;
-//     height: 1rem;
-//     cursor: pointer;
-//     box-shadow: $inner-shadow;
-//     border-radius: 1rem;
-//     position: relative;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//   }
+input[type=range]#volume-bar {
+  appearance: none;
+  height: 1em;
+  border-radius: 1rem;
+  // box-shadow: $inner-shadow;
+  box-shadow: $container-shadow;
+}
 
-//   &__btn {
-//     width: 2rem;
-//     height: 2rem;
-//     border-radius: 50%;
-//     background: var(--white);
-//     position: absolute;
-//     box-shadow: 0px .1rem .3rem 0px var(--greyLight-3);
-//     z-index: 200;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
+input[type=range]#volume-bar::-webkit-slider-runnable-track {
+  height: 1em;
+  cursor: pointer;
+  border-radius: 1rem;
+  background: linear-gradient(-1deg, var(--primary-dark) 0%, var(--primary) 50%, var(--primary-light) 100%);
+  box-shadow: 0px .1rem .3rem 0px var(--greyLight-3);
+    
+}
 
-//     &:hover ~ .slider__tooltip {opacity: 1;}
-//     &::after {
-//       content: '';
-//       position: absolute;
-//       width: .8rem;
-//       height: .8rem;
-//       border-radius: 50%;
-//       box-shadow: $inner-shadow;
-//     }
-//   }
+input[type=range]#volume-bar::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  background: var(--white);
+  background: radial-gradient(circle, rgba(228,235,245,1) 0%, rgba(255,255,255,1) 100%);
+  // border: none;
+  box-shadow: 0px .1rem .3rem 0px var(--greyLight-3);
+  // box-shadow: 0 0 2px black;
+  margin-top: calc(max((1em - 1px - 1px) * 0.5,0px) - 1.5em * 0.5);
+  // ::after {
+  //   content: '';
+  //   position: absolute;
+  //   width: 1rem;
+  //   height: 1rem;
+  //   border-radius: 50%;
+  //   box-shadow: $inner-shadow;
+  // }
+}
 
-//   &__color {
-//     height: 100%;
-//     width: 50%;
-//     position: absolute;
-//     left: 0;
-//     z-index: 100;
-//     border-radius: inherit;
-//     background: var(--primary);
-//     background: linear-gradient(-1deg, var(--primary-dark) 0%, var(--primary) 50%, var(--primary-light) 100%);
-//   }
+// PROGRESS BAR
+#progress-bar {
+  width: 100%;
+}
 
-//   &__tooltip {
-//     position: absolute;
-//     top: 2.6rem;
-//     height: 2.5rem;
-//     width: 3rem;
-//     border-radius: .6rem;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     font-size: 1.2rem;
-//     color: var(--primary);
-//     box-shadow: $shadow;
-//     opacity: 0;
-//     transition: opacity .3s ease;
-//   }
-// }
-
-#profile {
+#profile, #home {
   width: 50px;
   height: 50px;
   // width: 4rem;
@@ -320,45 +298,19 @@
   justify-content: center;
   align-items: center;
   font-size: 1.5rem;
-  cursor: pointer;
   color: var(--greyDark);
-  transition: all .5s ease;
+  cursor: pointer;
 
-  &:active {
-    box-shadow: $inner-shadow;
-    color: var(--primary);
+  .profile  {
+    transition: all .5s ease;
+  
+    &:active {
+      box-shadow: $inner-shadow;
+      color: var(--primary);
+    }
+    &:visited {color: inherit;}
   }
   &:hover {color: var(--primary);}
-}
-
-input[type=range]#volume-bar {
-  -webkit-appearance: none;
-}
-
-input[type=range]#volume-bar::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  width: 1rem;
-  height: 1rem;
-  border-radius: 50%;
-  background: var(--white);
-  border: none;
-  box-shadow: 0 0 2px black;
-  // margin-top: calc(max((3em - 1px - 1px) * 0.5,0px) - 3.5em * 0.5);
-}
-
-input[type=range]#volume-bar::-webkit-slider-runnable-track {
-  // -webkit-appearance: none;
-  height: 1em;
-  // border: 1px solid #b2b2b2;
-  box-shadow: $inner-shadow;
-  border-radius: 1rem;
-  // background: linear-gradient(90deg, rgba(34,193,195,1) 0%, rgba(253,187,45,0.6362920168067228) 100%);;
-  // box-shadow: none;
-}
-
-// PROGRESS BAR
-#progress-bar {
-  width: 100%;
 }
 
 @keyframes marquee {
