--- a/client/src/styles/components/_form.scss
+++ b/client/src/styles/components/_form.scss
@@ -1,4 +1,4 @@
-.login-register-form {
+form, .url-form {
   // display: block;
   display: grid;
 
@@ -34,6 +34,13 @@
         box-shadow: $shadow; 
       }
     }
+
+}
+
+#split {
+  display: flex;
+  gap: 1rem;
+  margin: 0;
 }
 
 .login-register-button {
