--- a/client/src/styles/components/_controls.scss
+++ b/client/src/styles/components/_controls.scss
@@ -313,6 +313,96 @@ input[type=range]#volume-bar::-webkit-slider-thumb {
   &:hover {color: var(--primary);}
 }
 
+ /*  BUTTONS  */
+
+button {
+  border: none;
+  // font-family: $main-font;
+  font-family: $main-font;
+  font-size: 1.5rem;
+  width: 15rem;
+  height: 3rem;
+  border-radius: 1rem;
+  box-shadow: $shadow;
+  justify-self: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: .3s ease;
+
+  &.btn__primary {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+    background: var(--primary);
+    box-shadow:inset .2rem .2rem 1rem var(--primary-light), 
+              inset -.2rem -.2rem 1rem var(--primary-dark),
+              $shadow;
+    color: var(--greyLight-1);
+
+    &:hover { color: var(--white); }
+    &:active {
+      box-shadow:inset .2rem .2rem 1rem var(--primary-dark), 
+            inset -.2rem -.2rem 1rem var(--primary-light);
+    }
+}
+
+  &.btn__secondary {
+    // grid-column: 1 / 2;
+    // grid-row: 5 / 6;
+    width: 5rem;
+    color: var(--greyDark);
+    &:hover { color: var(--primary); }
+    &:active {
+      box-shadow: $inner-shadow;
+    }
+  }
+
+p { 
+  font-size: 1.6rem;
+}
+}
+
+/*  CHECKBOX  */
+.checkbox { 
+  appearance: none;
+  width: 2rem;
+  height: 2rem;
+  box-shadow: $shadow;
+  cursor: pointer;
+  align-items: center;
+  background-color: var(--greyLight-1);
+  border-radius: 0.25rem;
+  color: var(--primary);
+  border: none;
+    
+  &:hover { 
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(228,235,245,1) 100%);
+  }
+  
+  &:checked {
+    background-color: var(--primary);
+    background: radial-gradient(circle, var(--primary) 0%, var(--primary) 100%);
+
+    // &:after {
+    //   content: '\2714';
+    //   // font-size: 14px;
+    //   position: absolute;
+    //   top: 0px;
+    //   left: 3px;
+    //   color: var(--primary);
+    // }
+  }
+  // i {
+  //   font-size: 1.8rem;
+  //   font-weight: 700;
+  //   color: var(--greyDark);
+  //   transition: .3s ease;
+  // }
+
+}
+
 @keyframes marquee {
   0% { transform: translateX(70%); }
   // 0% { transform: translateX(0); }
