--- a/client/src/styles/components/_controls.scss
+++ b/client/src/styles/components/_controls.scss
@@ -1,3 +1,8 @@
+a, a:visited, a:hover, a:active {
+  color: inherit;
+  text-decoration: none;
+}
+
 // LED Timer
 .led {
   font-family: 'Digital-7 Mono', sans-serif;
@@ -89,6 +94,14 @@
         opacity: 1;
       }
     }
+    // .add {
+    //   position: absolute;
+    //   opacity: 1;
+    //   transition: all .2s linear;
+    //   &.visibility {
+    //     opacity: 1;
+    //   }
+    // }
   }
 
   &__back-1, &__back-2 {
@@ -320,7 +333,8 @@ input[type=range]#progress-bar::-webkit-slider-thumb {
   margin-top: calc(max((1em - 1px - 1px) * 0.5,0px) - 1.75em * 0.5);
 }
 
-#profile, #home {
+// ICONS FOR NAVIGATION
+#profile, #home, #add {
   width: 50px;
   height: 50px;
   // width: 4rem;
@@ -344,6 +358,11 @@ input[type=range]#progress-bar::-webkit-slider-thumb {
     &:visited {color: inherit;}
   }
   &:hover {color: var(--primary);}
+}
+
+#add {
+  width: 5rem;
+  height: 5rem;
 }
 
  /*  BUTTONS  */
