--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import 'components/layout';
 @import 'components/controls';
 @import 'components/form';
+@import 'components/media_queries';
 
 * {
   box-sizing: border-box;
