--- a/client/src/styles/components/_media_queries.scss
+++ b/client/src/styles/components/_media_queries.scss
@@ -1,4 +1,5 @@
-@media only screen and (max-width: 930px) {
+// SMALLER LAPTOPS & COMPUTERS
+@media only screen and (max-width: 992px) {
   #grid-container {
     grid-template-columns: 1fr 1fr;
     gap: 1.5em;
@@ -13,8 +14,16 @@
       }
     }
   }
+
+  // ADD PAGE
+  #add-form-container {
+    #preview-mixtape-container {
+      display: block;
+    }
+  }
 }
 
+// TABLETS
 @media only screen and (max-width: 800px) {
 
   #control-main-container {
@@ -40,8 +49,26 @@
       }
     }
   }
+
+  #change-profile-container {
+    display: block;
+
+    #change-mood-container {
+      display: flex;
+      padding-top: 0;
+      
+      #mood-controls {
+        margin: 0 auto;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  }
+
 }
 
+// MOBILE DEVICES
 @media only screen and (max-width: 600px) {
   .container {
     margin: 1rem;
@@ -134,6 +161,61 @@
     margin-bottom: 1rem;
   }
 
-  
+  // PROFILE PAGE
+  #add-led-container {
+    display: block;
+    position: relative;
+    padding: 0;
+
+    #leftside-container {
+      margin-bottom: 1rem;
+    }
+
+    #rightside-container {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+  }
+
+  #change-profile-container {
+    display: block;
+
+    #change-user-container, #change-mood-container {
+      margin: 1rem 0;
+      padding: 0;
+    }
+  }
+
+  // ADD PAGE
+  #add-form-container {
+    #preview-mixtape-container {
+      display: block;
+
+      #preview-fields, #preview-reactplayer {
+        padding: 0;
+        form {
+          display: block;
+          // width: 100%;
+          label {
+            width: auto;
+            margin-right: 1rem;
+          }
+
+          .check-container div {
+            width: 30%;
+          }
+
+          .login-register-button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+        }
+
+        
+      }
+    }
+  }
 
 }
